--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.3.21",
     "geist": "^1.3.1",
     "lucide-react": "^0.417.0",
