--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
     "usehooks-ts": "^3.1.0",
+    "uuid": "^11.0.3",
     "vaul": "^0.9.1"
   },
   "devDependencies": {
