--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "geist": "^1.3.1",
     "lucide-react": "^0.417.0",
     "next": "15.0.3",
+    "next-safe-action": "^7.10.2",
     "next-themes": "^0.3.0",
     "prisma": "^6.1.0",
     "react": "^18.3.1",
@@ -50,7 +51,8 @@
     "unified": "^11.0.5",
     "usehooks-ts": "^3.1.0",
     "uuid": "^11.0.3",
-    "vaul": "^0.9.1"
+    "vaul": "^0.9.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
