--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
     "shiki": "^1.22.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
