--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@openpanel/nextjs": "^1.0.7",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -42,6 +43,7 @@
     "prisma": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
     "rehype-pretty-code": "^0.14.0",
     "rehype-stringify": "^10.0.1",
