--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@date-fns/utc": "^2.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@openpanel/nextjs": "^1.0.7",
     "@prisma/client": "^6.1.0",
@@ -30,9 +31,13 @@
     "@splinetool/runtime": "^1.9.37",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.3",
+    "@vercel/functions": "^1.5.2",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.3.21",
     "geist": "^1.3.1",
