--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@splinetool/runtime": "^1.9.37",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
+    "@tanstack/react-table": "^8.20.6",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
     "@vercel/functions": "^1.5.2",
