--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
+    "recharts": "^2.15.0",
     "rehype-pretty-code": "^0.14.0",
     "rehype-stringify": "^10.0.1",
     "remark-gfm": "^4.0.0",
