--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "framer-motion": "^11.3.21",
     "geist": "^1.3.1",
     "lucide-react": "^0.417.0",
+    "motion": "^11.17.0",
     "next": "15.0.3",
     "next-safe-action": "^7.10.2",
     "next-themes": "^0.3.0",
