--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@supabase/supabase-js": "^2.47.10",
     "@tanstack/react-query": "^5.62.16",
     "@tanstack/react-table": "^8.20.6",
+    "@trigger.dev/sdk": "^3.3.10",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
     "@vercel/functions": "^1.5.2",
@@ -58,6 +59,7 @@
     "next": "15.0.3",
     "next-safe-action": "^7.10.2",
     "next-themes": "^0.3.0",
+    "nuqs": "^2.3.1",
     "prisma": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -82,6 +84,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
+    "@trigger.dev/build": "^3.3.10",
     "@types/canvas-confetti": "^1.9.0",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -91,5 +94,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
 }
