--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.3.21",
     "geist": "^1.3.1",
+    "languine": "1.0.3-canary.0",
     "lucide-react": "^0.417.0",
     "motion": "^11.17.0",
     "next": "15.0.3",
+    "next-intl": "^3.26.3",
     "next-safe-action": "^7.10.2",
     "next-themes": "^0.3.0",
     "nuqs": "^2.3.1",
