--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate --no-engine"
   },
   "dependencies": {
     "@date-fns/utc": "^2.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@openpanel/nextjs": "^1.0.7",
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.3.0",
+    "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.3",
