--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.2.1",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-intersection-observer": "^9.15.1",
     "recharts": "^2.15.0",
     "rehype-pretty-code": "^0.14.0",
     "rehype-stringify": "^10.0.1",
