--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.1",
+    "resend": "^4.1.2",
     "shiki": "^1.22.0",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.4.0",
